--- a/nginx-letsencrypt-swarm.yml
+++ b/nginx-letsencrypt-swarm.yml
@@ -54,6 +54,7 @@ services:
     image: jrcs/letsencrypt-nginx-proxy-companion
     environment:
       - DEFAULT_EMAIL=youremail@example.com
+      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
     restart: unless-stopped
     deploy:
       placement:
