--- a/nginx-letsencrypt-swarm.yml
+++ b/nginx-letsencrypt-swarm.yml
@@ -1,86 +1,57 @@
-version: "3"
-services:
-  nginx-web:
-    image: nginx:alpine
-    labels:
-      - com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy
-    restart: unless-stopped
-    deploy:
-      placement:
-        constraints:
-          - node.role == manager
-      replicas: 1
+# docker network create webproxy --driver overlay --attachable
+# docker stack rm nginx-proxy
+# docker stack deploy -c nginx-letsencrypt-swarm.yml nginx-proxy
+# docker stack ls
+# docker stack services nginx-proxy
+# docker stack ps nginx-proxy --no-trunc
+# docker service ls
+# docker service logs nginx-proxy_nginx-proxy
+# docker service logs nginx-proxy_acme-companion
+version: '3.3'
+services:    
+  nginx-proxy:
+    image: nginxproxy/nginx-proxy
     ports:
-      - 80:80
-      - 443:443
+      - '80:80'
+      - '443:443'
+    deploy:
+      placement:
+        constraints:
+          - node.role == manager
     volumes:
-      - conf:/etc/nginx/conf.d
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-      - certs:/etc/nginx/certs:ro
-    networks:
-      - webproxy
-    logging:
-      options:
-        max-size: '4m'
-        max-file: '10'
-
-  nginx-gen:
-    image: helder/docker-gen
-    command: -notify "docker-label-sighup com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy" -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+      - 'certs:/etc/nginx/certs:rw'
+      - 'vhost:/etc/nginx/vhost.d:rw'
+      - 'html:/usr/share/nginx/html'
+      - '/var/run/docker.sock:/tmp/docker.sock:ro'
     labels:
-      - com.github.jrcs.letsencrypt_nginx_proxy_companion.docker_gen
-    restart: unless-stopped
-    deploy:
-      placement:
-        constraints:
-          - node.role == manager
-      replicas: 1
-    volumes:
-      - conf:/etc/nginx/conf.d
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-      - certs:/etc/nginx/certs:ro
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      - /srv/nginx-proxy/docker-gen/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy"
     networks:
       - webproxy
-    logging:
-      options:
-        max-size: '4m'
-        max-file: '10'
-
-  nginx-letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion
+  acme-companion:
+    image: nginxproxy/acme-companion
     environment:
-      - DEFAULT_EMAIL=youremail@example.com
-      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
-    restart: unless-stopped
+      - NGINX_PROXY_CONTAINER=nginx-proxy
+    volumes:            
+      - '/var/run/docker.sock:/var/run/docker.sock:ro'  
+      - 'acme:/etc/acme.sh'
+      - 'certs:/etc/nginx/certs:rw'
+      - 'vhost:/etc/nginx/vhost.d:rw'
+      - 'html:/usr/share/nginx/html'
     deploy:
       placement:
         constraints:
           - node.role == manager
-      replicas: 1
-    volumes:
-      - conf:/etc/nginx/conf.d
-      - vhost:/etc/nginx/vhost.d
-      - html:/usr/share/nginx/html
-      - certs:/etc/nginx/certs
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - DEFAULT_EMAIL=example@example.com
     networks:
       - webproxy
-    logging:
-      options:
-        max-size: '4m'
-        max-file: '10'
+        
+volumes:  
+  certs:  
+  vhost:  
+  html:  
+  acme:
 
-networks:
-  webproxy:
-    external:
-      name: webproxy
-
-volumes:
-  conf:
-  vhost:
-  html:
-  certs:
+networks:  
+  webproxy:    
+    external: true
